problem versions solved npm i -s @angular/flex-layout @angular/cdk

--- a/E1/src/app/app.component.html
+++ b/E1/src/app/app.component.html
@@ -6,3 +6,11 @@
     test2
   </div>
 </div>
+<div class="outerContainer">
+  <div fxLayout="row" fxLayoutGap="10px" class="container">
+    <div fxLayoutAlign="center center">1</div>
+    <div fxLayoutAlign="center center">2</div>
+    <div fxLayoutAlign="center center">3</div>
+    <div fxLayoutAlign="center center">4</div>
+  </div>
+</div>
